kube/service-a.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a-app
          image: ductram/service_a:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "1"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: service-as
spec:
  selector:
    app: service-a
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
