kube/service-b.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b-app
          image: ductram/service_b:latest
          ports:
            - containerPort: 8081
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "1"
            limits:
              memory: "512Mi"
              cpu: "1"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: service-bs
spec:
  selector:
    app: service-b
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
