kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-b-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: service-b-ingress
spec:
  rules:
    - host: k8s.springboot.myservice
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-bs
                port:
                  number: 8081
